Fix word spacing

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -558,7 +558,6 @@ html, body
     color #666
     font-family Lato
     font-size 18pt
-    line-height 1.5em
 
     ul
       display block
@@ -793,6 +792,9 @@ a.icon-link
       position absolute
       top 4px
       left 4px
+
+  .icon-text
+    margin-top -0.25em
 
   &:hover
     color #189ed6 !important
